git-ops/app/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitops
  namespace: gitops
spec:
  selector:
    app: gitops
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
